# PicoPendulum

./: .gitignore  CMakeLists.txt  CMakeLists_pico.txt  Makefile  README.md  VirtualEncoder.hpp  analyze_pendulum.py  build.sh  build_pico.sh  enhanced_pendulum_data.csv  enhanced_physics_simulation.cpp  enhanced_physics_simulation.hpp  imgui.ini  pendulum_simulator.cpp  setup_pico_environment.sh  simple_simulator.cpp  test_values  test_values.c  unified_virtual_encoder.c  unified_virtual_encoder.h  unified_virtual_encoder.hpp
adaptive_mass/: mass_estimator.c  mass_estimator.h  mass_friction_estimator.c  mass_friction_estimator.h  mass_integration.c  mass_integration.h
common/: control_utils.h  energy_control.c  energy_control.h
embedded/: as5600.c  as5600.h  config.h  control.c  control.h  debug.c  debug.h  drv8833.c  drv8833.h  drv8833_real_pwm.c  drv8833_unified.c  filters.c  filters.h  main.c  motor_protection.c  motor_protection.h  motor_protection.h.old  pwm_simulation.c  pwm_simulation.h  virtual_encoder.c  virtual_encoder.h
qt_gui/: ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  PendulumWidget.cpp  PendulumWidget.h  qt_main.cpp
